--- a/spec/vcr_cassettes/vins/nissan_altima.yml
+++ b/spec/vcr_cassettes/vins/nissan_altima.yml
@@ -2,38 +2,38 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.edmunds.com/v1/api/toolsrepository/vindecoder?vin=1N4AL3AP4DC295509&fmt=json&api_key=vk8s2ze9y5tej7bwjp8c2v6g
+    uri: https://api.edmunds.com/v1/api/toolsrepository/vindecoder?api_key=vk8s2ze9y5tej7bwjp8c2v6g&fmt=json&vin=1N4AL3AP4DC295509
     body:
       encoding: US-ASCII
       string: ''
     headers:
-      accept:
+      Accept:
       - ! '*/*; q=0.5, application/xml'
-      accept-encoding:
+      Accept-Encoding:
       - gzip, deflate
-      user-agent:
+      User-Agent:
       - Ruby
   response:
     status:
       code: 200
       message: OK
     headers:
-      content-type:
+      Content-Type:
       - application/json
-      date:
+      Date:
       - Tue, 01 Oct 2013 00:16:52 GMT
-      p3p:
+      P3p:
       - policyref="http://www.edmunds.com/w3c/p3p.xml",CP="IDC DSP COR CURa ADMa DEVa
         TAIa OUR BUS IND UNI COM NAV INT"
-      server:
+      Server:
       - Apache-Coyote/1.1
-      x-environment:
+      X-Environment:
       - Prod-2
-      x-mashery-responder:
+      X-Mashery-Responder:
       - prod-j-worker-us-east-1c-34.mashery.com
-      transfer-encoding:
+      Transfer-Encoding:
       - chunked
-      connection:
+      Connection:
       - keep-alive
     body:
       encoding: US-ASCII
@@ -154,6 +154,6 @@ http_interactions:
         2-stage unlocking"}}},"MISC._INTERIOR_FEATURES":{"id":30,"name":"MISC._INTERIOR_FEATURES","attributes":{"CARGO_AREA_LIGHT":{"id":288,"name":"CARGO_AREA_LIGHT","value":"trunk
         light"},"READING_LIGHTS":{"id":294,"name":"READING_LIGHTS","value":"front
         and rear reading lights"}}}},"squishVins":[{"squishVin":"1N4AL3APDC","engineNames":["4INAG2.5"],"squishVinTransmissions":[{"transmissionType":"CVT","numberOfSpeeds":0}]},{"squishVin":"1N4AL3APDN","engineNames":["4INAG2.5"],"squishVinTransmissions":[{"transmissionType":"CVT","numberOfSpeeds":0}]}],"publicationState":"NEW_USED","styleIds":[200418416,200444018,101404650,200418417,200418415]}]}'
-    http_version: '1.1'
-  recorded_at: Tue, 01 Oct 2013 01:05:48 GMT
+    http_version: 
+  recorded_at: Tue, 01 Oct 2013 01:09:12 GMT
 recorded_with: VCR 2.6.0
